--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-typography": "^2.3.21",
     "gatsby-remark-copy-linked-files": "^2.1.36",
     "gatsby-remark-images": "^3.1.42",
@@ -34,6 +35,7 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
+    "disqus-react": "^1.0.7",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-transformer-sharp": "^2.3.14",
     "prettier": "^1.19.1"
